<resources>
    <string name="app_name">People Connect</string>
    <string name="gesti_n_de_usuarios">GESTIÓN DE USUARIOS</string>
    <string name="buscar_usuario">Buscar Usuario</string>
    <string name="buscar">BUSCAR</string>
    <string name="nuevo_usuario">Nuevo Usuario</string>
    <string name="registrar">REGISTRAR</string>
    <string name="formulario_de_registro">FORMULARIO DE REGISTRO</string>
    <string name="captcha">Captcha</string>
    <string name="escriba_el_c_digo_anterior">Escriba el código anterior:</string>
    <string name="he_leido_y_acepto_las">He leido y acepto las</string>
    <string name="condiciones_de_uso">condiciones de uso</string>
    <string name="registrarse">REGISTRARSE</string>
    <string name="informaci_n_de_usuario">INFORMACIÓN DE USUARIO</string>
    <string name="datos_personales">Datos personales</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="estado_civil">Estado Civil</string>
    <string name="soltero_a">Soltero/a</string>
    <string name="casado_a">Casado/a</string>
    <string name="divorciado_a">Divorciado/a</string>
    <string name="viudo_a">Viudo/a</string>
    <string name="pa_s">País</string>
    <string name="provincia">Provincia</string>
    <string name="c_digo_postal">Código Postal</string>
    <string name="datos_de_contacto">Datos de contacto</string>
    <string name="email">Email</string>
    <string name="tel_fono">Teléfono</string>
    <string name="nueva_contrase_a">Nueva Contraseña</string>
    <string name="contrase_a">Contraseña</string>
    <string name="repita_la_contrase_a">Repita la contraseña</string>
    <string name="avatar">Avatar</string>
    <string name="modificar_usuario">MODIFICAR USUARIO</string>
    <string name="eliminar_usuario">ELIMINAR USUARIO</string>
</resources>