<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Registro">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@drawable/grandiente">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingRight="40dp"
            android:paddingLeft="40dp"
            android:paddingBottom="40dp">

            <ImageView
                android:id="@+id/imageback"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/backarrowy" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="90dp"
                    android:layout_height="70dp"
                    android:paddingTop="5dp"
                    app:srcCompat="@drawable/userba" />

                <TextView
                    android:id="@+id/textFormulario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="12dp"
                    android:paddingEnd="50dp"
                    android:gravity="center"
                    style="@style/FontTitle"
                    android:text="@string/formulario_de_registro" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                style="@style/line" />

            <TextView
                android:id="@+id/textDatos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                style="@style/Font"
                android:text="@string/datos_personales" />

            <EditText
                android:id="@+id/editNombre"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="20dp"
                style="@style/Input"
                android:inputType="text"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:hint="@string/nombre" />

            <EditText
                android:id="@+id/editApellidos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="20dp"
                style="@style/Input"
                android:inputType="text"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:hint="@string/apellidos" />

            <EditText
                android:id="@+id/editFecNac"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="20dp"
                style="@style/Input"
                android:focusable="false"
                android:clickable="true"
                android:inputType="date"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:hint="@string/fecha_de_nacimiento" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:padding="20dp"
                android:background="@drawable/inputs">

                <TextView
                    android:id="@+id/textCivil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:text="@string/estado_civil" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="7dp"
                    android:background="@color/colorP" />

                <RadioButton
                    android:id="@+id/radioButSoltero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    style="@style/FontRadio"
                    android:text="@string/soltero_a" />
                <RadioButton
                    android:id="@+id/radioButCasado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/FontRadio"
                    android:text="@string/casado_a" />
                <RadioButton
                    android:id="@+id/radioButDivorciado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/FontRadio"
                    android:text="@string/divorciado_a" />
                <RadioButton
                    android:id="@+id/radioButViudo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/FontRadio"
                    android:text="@string/viudo_a" />

            </RadioGroup>

            <TextView
                android:id="@+id/textPais"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:text="@string/pa_s" />

            <Spinner
                android:id="@+id/spinnerPais"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/Input"/>

            <TextView
                android:id="@+id/textProvincia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:text="@string/provincia" />

            <Spinner
                android:id="@+id/spinnerProvincia"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/Input"/>

            <EditText
                android:id="@+id/editCP"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="20dp"
                style="@style/Input"
                android:inputType="number"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:hint="@string/c_digo_postal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                style="@style/line" />

            <TextView
                android:id="@+id/textContacto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                style="@style/Font"
                android:text="@string/datos_de_contacto" />

            <EditText
                android:id="@+id/editMail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="20dp"
                style="@style/Input"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:hint="@string/email" />

            <EditText
                android:id="@+id/editTelefono"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="20dp"
                style="@style/Input"
                android:inputType="number"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:hint="@string/tel_fono" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                style="@style/line" />

            <TextView
                android:id="@+id/textContras"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                style="@style/Font"
                android:text="@string/contrase_a" />

            <EditText
                android:id="@+id/editPass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="20dp"
                style="@style/Input"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:hint="@string/contrase_a" />

            <EditText
                android:id="@+id/editRepPass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="20dp"
                style="@style/Input"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:hint="@string/repita_la_contrase_a" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                style="@style/line" />

            <TextView
                android:id="@+id/textAvatar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                style="@style/Font"
                android:text="@string/avatar" />

            <RadioGroup
                android:id="@+id/radioGroupAvatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:padding="8dp"
                android:background="@drawable/inputs">

                <RadioButton
                    android:id="@+id/radioButAv1"
                    android:button="@null"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:checked="true"
                    android:background="@drawable/customradioavatar1"/>
                <RadioButton
                    android:id="@+id/radioButAv2"
                    android:button="@null"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="@drawable/customradioavatar2" />
                <RadioButton
                    android:id="@+id/radioButAv3"
                    android:button="@null"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="@drawable/customradioavatar3"
                    />

            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                style="@style/line" />

            <TextView
                android:id="@+id/textCaptcha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                style="@style/Font"
                android:text="@string/captcha" />

            <TextView
                android:id="@+id/captcha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:text="" />

            <TextView
                android:id="@+id/textCaptchaMensaje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:text="@string/escriba_el_c_digo_anterior" />

            <EditText
                android:id="@+id/editCaptcha"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="20dp"
                style="@style/Input"
                android:inputType="text"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">

                <CheckBox
                    android:id="@+id/checkBoxCond"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorP"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="italic"
                    android:textSize="14sp"
                    android:text="@string/he_leido_y_acepto_las" />

                <TextView
                    android:id="@+id/textCond"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorP"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:text="@string/condiciones_de_uso" />

            </LinearLayout>

            <Button
                android:id="@+id/botonRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                style="@style/Boton"
                android:text="@string/registrarse" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>